# clipboard-history

./: .clang-format  .cmake-format  .gitignore  BasePrompt.md  CMakeLists.txt  README.md  debug_parser.cpp  test_clipboard_window.cpp  test_dialogs.cpp  test_signal_integration.cpp
.github/: copilot-instructions.md
resources/: clipboard-manager.desktop.in
specs/001-linux-clipboard-history/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-linux-clipboard-history/contracts/: clipboard-manager.md  clipboard-window.md  tray-icon.md
src/: main.cpp
src/cli/: argument_parser.cpp  argument_parser.h
src/lib/: global_hotkey.cpp  global_hotkey.h
src/models/: clipboard_history.cpp  clipboard_history.h  clipboard_item.cpp  clipboard_item.h  configuration.cpp  configuration.h
src/services/: clipboard_manager.cpp  clipboard_manager.h
src/ui/: about_dialog.cpp  about_dialog.h  clipboard_window.cpp  clipboard_window.h  settings_dialog.cpp  settings_dialog.h  tray_icon.cpp  tray_icon.h
tests/contract/: test_argument_parser.cpp  test_clipboard_manager.cpp  test_clipboard_window.cpp  test_global_hotkey.cpp  test_tray_icon.cpp
tests/integration/: test_clipboard_monitoring.cpp  test_hotkey_interaction.cpp  test_persistence_integration.cpp  test_pinning_workflow.cpp  test_tray_integration.cpp
tests/performance/: test_performance.cpp
tests/unit/: test_clipboard_item.cpp
